fixed icons alignments

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,4 @@
-// Specific CSS for your home-page
+.profile {
+	width: 10rem;
+	height: 10rem;
+}
